# pep789-testsuite

./: pyproject.toml
.github/workflows/: test.yml
src/pep789/: __init__.py
tests/: test_pep789.py
