[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pep789-testsuite"
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = []

[tool.hatch.version]
path = "src/pep789/__init__.py"
pattern = "__version__ = \"(?P<version>.+)\""

[tool.hatch.build.targets.wheel]
packages = ["src/pep789"]
