[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pep789-testsuite"
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
test = [
    "anyio[trio] >= 4.9.0",
    "pytest >= 8.3.5",
]

[tool.hatch.version]
path = "src/pep789/__init__.py"
pattern = "__version__ = \"(?P<version>.+)\""

[tool.hatch.build.targets.wheel]
packages = ["src/pep789"]
